# Electronic-System-Level-Design-and-Synthesis

./: README.md
exam1/: exam1_108062209.docx
exam1/exam1-p1/: CMakeLists.txt  Decimation_filter.cpp  Decimation_filter.h  Testbench.cpp  Testbench.h  main.cpp  ready_valid_port.h
exam1/exam1-p2/: Decimation_filter.h  Testbench.h  main.cpp
final project/stratus/: project.tcl
final_project/: README.md  report.docx
final_project/data/: gen_data.ipynb
final_project/memlib/: NewMem_1.bdm  RAM_1000X8.bdm  RAM_250X8.bdm  RAM_500X8.bdm  memlib.bdl
final_project/source/: AutocorrelationFunction.cpp  AutocorrelationFunction.h  System.cpp  System.h  Testbench.cpp  Testbench.h  def.h
final_project/stratus/: project.tcl
hw1/: README.md
hw1/filter_with_buffer/: MedianMeanFilter.cpp  MedianMeanFilter.h  Testbench.cpp
hw1/filter_without_buffer/: CMakeLists.txt  MedianMeanFilter.cpp  MedianMeanFilter.h  README.md  Testbench.cpp  Testbench.h  main.cpp
hw1/standard_test_images/: gen_noise_img.py
hw2/: README.md  simulation_time.csv
hw2/filter_seperate_channel/: MedianMeanFilter.cpp  MedianMeanFilter.h  README.md  Testbench.cpp  Testbench.h  main.cpp
hw2/filter_with_tlm/: MedianMeanFilter.cpp  MedianMeanFilter.h  README.md  Testbench.cpp  Testbench.h  main.cpp
hw2/filter_with_tlm_qk/: CMakeLists.txt  Initiator.cpp  Initiator.h  README.md  Testbench.cpp  Testbench.h  filter_def.h  main.cpp
hw2/filter_with_tlm_qk_bus/: MedianMeanFilter.cpp  MemoryMap.h  README.md  SimpleBus.h  (+3 more)
hw3/: MedianMeanFilter.cpp  MedianMeanFilter.h  README.md  System.cpp  System.h  Testbench.cpp  Testbench.h  result.csv
hw4/: README.md
(+30 files in other folders)
